# haskell-lecture2

./: README.md  haskell-lecture2.cabal
src/: Ex0.hs  Ex1.hs  Ex10.hs  Ex11.hs  Ex12.hs  Ex13.hs  Ex2.hs  Ex3.hs  Ex4.hs  Ex5.hs  Ex6.hs  Ex7.hs  Ex8.hs  Ex9.hs  Lib.hs
